[gd_scene load_steps=42 format=2]

[ext_resource path="res://circle.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Palette.gd" type="Script" id=3]
[ext_resource path="res://rhr68md4.bmp" type="Texture" id=4]
[ext_resource path="res://LightGradient.tres" type="Texture" id=5]
[ext_resource path="res://Core.gd" type="Script" id=6]
[ext_resource path="res://ModeCycle.gd" type="Script" id=7]
[ext_resource path="res://ShareTechMono-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://DayLight.gd" type="Script" id=9]
[ext_resource path="res://EndScreen.gd" type="Script" id=10]
[ext_resource path="res://StartScreen.gd" type="Script" id=11]
[ext_resource path="res://BuildBar.gd" type="Script" id=12]
[ext_resource path="res://UiBuildButton.gd" type="Script" id=13]
[ext_resource path="res://Button.gd" type="Script" id=14]
[ext_resource path="res://MuteBox.gd" type="Script" id=15]
[ext_resource path="res://CurrentPower.gd" type="Script" id=16]
[ext_resource path="res://Camera2D.gd" type="Script" id=17]
[ext_resource path="res://VictoryScreen.gd" type="Script" id=18]
[ext_resource path="res://InstructionsScreen.gd" type="Script" id=19]
[ext_resource path="res://BuildBuffer.gd" type="Script" id=20]

[sub_resource type="Environment" id=1]
background_mode = 4
tonemap_mode = 4

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 2

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=22]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=10]
cull_mode = 2
polygon = PoolVector2Array( 25, -60.7, 25, -58.6, 50, -41.6, 50, -38.8, 63, -16.8, 63, -11, 64, 11.7, 64, 14, 61.9, 14, 48.9, 43, 46.9, 43, 16.9, 63, 10.9, 63, -25, 60.8, -25, 58.6, -50, 41.6, -50, 38.8, -64, 11.7, -64, -11.4, -60.3, -25, -58.6, -25, -41.6, -50, -38.7, -50, -14, -61.9, -14, -64, -10.8, -64 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.977654, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=8]
gradient = SubResource( 7 )
width = 124
height = 124
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0, 0.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[sub_resource type="CircleShape2D" id=9]
radius = 57.0

[sub_resource type="DynamicFont" id=13]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 13 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.013468, 0.144781, 0.329966 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=12]
gradient = SubResource( 11 )
width = 1024
height = 5

[sub_resource type="DynamicFont" id=16]
size = 52
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 34
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=23]
size = 34
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=17]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=19]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=20]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 17 )

[node name="Palette" type="Node2D" parent="."]
script = ExtResource( 3 )
color_a = Color( 0.956863, 0.85098, 0.439216, 1 )
color_b = Color( 0.792157, 0.0666667, 0.0666667, 1 )
color_c = Color( 0.305882, 0.603922, 0.784314, 1 )
player_sample_a = 0.174
player_sample_b = 0.631
background_sample_a = 0.187
background_sample_b = 0.652
accent_sample_a = 0.173
accent_sample_b = 0.652
apply_path = NodePath("..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.956863, 0.85098, 0.439216, 1 )
material = SubResource( 6 )
position = Vector2( 507, 298 )
scale = Vector2( 16.0313, 9.40625 )
texture = ExtResource( 4 )

[node name="DayLight" type="Light2D" parent="."]
position = Vector2( 507, 298 )
texture = ExtResource( 5 )
texture_scale = 5.67
script = ExtResource( 9 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 393, 297 )
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="Player"]
width = 5.0
width_curve = SubResource( 21 )
default_color = Color( 0.4, 0.501961, 1, 1 )
gradient = SubResource( 22 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Player"]
texture = ExtResource( 5 )
texture_scale = 0.14
energy = 0.1
shadow_enabled = true
shadow_filter_smooth = 55.1

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
scale = Vector2( 0.15, 0.15 )
occluder = SubResource( 10 )

[node name="BuildBuffer" type="Sprite" parent="."]
modulate = Color( 0.996078, 0, 0, 0.47451 )
position = Vector2( 512, 300 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
script = ExtResource( 20 )

[node name="Core" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 512, 300 )
script = ExtResource( 6 )

[node name="CoreBody" type="StaticBody2D" parent="Core"]

[node name="Sprite" type="Sprite" parent="Core/CoreBody"]
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Core/CoreBody"]
shape = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="Core"]
texture = ExtResource( 5 )
energy = 0.82
shadow_enabled = true

[node name="PickupRadius" type="Area2D" parent="Core"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Core/PickupRadius"]
shape = SubResource( 9 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
theme = SubResource( 14 )

[node name="ModeCycle" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 27.0
script = ExtResource( 7 )

[node name="ModeLabel" type="Label" parent="UI/ModeCycle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "Day"
align = 1

[node name="ProgressBar" type="TextureProgress" parent="UI/ModeCycle"]
anchor_right = 1.0
margin_bottom = 64.0
step = 0.1
value = 94.0
texture_progress = SubResource( 12 )

[node name="StartScreen" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/StartScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -304.5
margin_top = 81.0
margin_right = 304.5
margin_bottom = 141.0
custom_fonts/font = SubResource( 16 )
text = "Glean the Luminescent"

[node name="Button" type="Button" parent="UI/StartScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.5
margin_top = -175.0
margin_right = 63.5
margin_bottom = -120.0
custom_colors/font_color_hover = Color( 0.501961, 0.180392, 0.180392, 1 )
custom_fonts/font = SubResource( 15 )
text = "START"
flat = true
script = ExtResource( 14 )

[node name="Instructions" type="Button" parent="UI/StartScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -114.0
margin_top = -97.0
margin_right = 114.0
margin_bottom = -42.0
custom_colors/font_color_hover = Color( 0.501961, 0.180392, 0.180392, 1 )
custom_fonts/font = SubResource( 15 )
text = "INSTRUCTIONS"
flat = true
script = ExtResource( 14 )

[node name="MuteBox" type="CheckBox" parent="UI/StartScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -60.0
margin_right = -34.0
margin_bottom = -33.0
text = "Mute"
script = ExtResource( 15 )

[node name="InstructionsScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )

[node name="Label" type="Label" parent="UI/InstructionsScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -304.5
margin_top = 62.0
margin_right = 304.5
margin_bottom = 122.0
custom_fonts/font = SubResource( 16 )
text = "INSTRUCTIONS"
align = 1

[node name="Control" type="ColorRect" parent="UI/InstructionsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -163.0
margin_right = 450.0
margin_bottom = 137.0
color = Color( 0, 0, 0, 0.294118 )

[node name="Label2" type="Label" parent="UI/InstructionsScreen/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -127.5
margin_right = 432.0
margin_bottom = 127.5
custom_fonts/font = SubResource( 23 )
text = "WASD to move
Collect power and deliver to your core
At night, aim with your mouse and shoot baddies
Shooting costs power
Build collectors and towers, but they cost power
Reach 50 power to win"
align = 1

[node name="Back" type="Button" parent="UI/InstructionsScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.5
margin_top = -147.0
margin_right = 63.5
margin_bottom = -92.0
custom_colors/font_color_hover = Color( 0.501961, 0.180392, 0.180392, 1 )
custom_fonts/font = SubResource( 15 )
text = "BACK"
flat = true
script = ExtResource( 14 )

[node name="EndScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="GameOver" type="Label" parent="UI/EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -238.0
margin_right = 103.5
margin_bottom = -189.0
custom_fonts/font = SubResource( 17 )
text = "Game Over"
align = 1

[node name="Button" type="Button" parent="UI/EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = 122.0
margin_right = 86.5
margin_bottom = 177.0
custom_colors/font_color_hover = Color( 0.501961, 0.180392, 0.180392, 1 )
custom_fonts/font = SubResource( 18 )
text = "Restart"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -133.0
margin_right = 512.0
margin_bottom = -82.0

[node name="CyclesSurvivedContainer" type="VBoxContainer" parent="UI/EndScreen/HBoxContainer"]
margin_right = 510.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="CyclesSurvivedTitle" type="Label" parent="UI/EndScreen/HBoxContainer/CyclesSurvivedContainer"]
margin_right = 510.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 19 )
text = "Cycles Survived"
align = 1

[node name="CyclesSurvivedValue" type="Label" parent="UI/EndScreen/HBoxContainer/CyclesSurvivedContainer"]
margin_top = 32.0
margin_right = 510.0
margin_bottom = 51.0
text = "10"
align = 1

[node name="LightCollectedContainer" type="VBoxContainer" parent="UI/EndScreen/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="LightCollectedTitle" type="Label" parent="UI/EndScreen/HBoxContainer/LightCollectedContainer"]
margin_right = 510.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 19 )
text = "Total Light Collected"
align = 1

[node name="LightCollectedValue" type="Label" parent="UI/EndScreen/HBoxContainer/LightCollectedContainer"]
margin_top = 32.0
margin_right = 510.0
margin_bottom = 51.0
text = "10"
align = 1

[node name="VictoryScreen" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )

[node name="Victory" type="Label" parent="UI/VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -238.0
margin_right = 103.5
margin_bottom = -189.0
custom_fonts/font = SubResource( 17 )
text = "Victory"
align = 1

[node name="Button" type="Button" parent="UI/VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = 122.0
margin_right = 86.5
margin_bottom = 177.0
custom_colors/font_color_hover = Color( 0.501961, 0.180392, 0.180392, 1 )
custom_fonts/font = SubResource( 18 )
text = "Again?"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -133.0
margin_right = 512.0
margin_bottom = -82.0

[node name="CyclesSurvivedContainer" type="VBoxContainer" parent="UI/VictoryScreen/HBoxContainer"]
margin_right = 510.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="CyclesSurvivedTitle" type="Label" parent="UI/VictoryScreen/HBoxContainer/CyclesSurvivedContainer"]
margin_right = 510.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 19 )
text = "Cycles Used"
align = 1

[node name="CyclesSurvivedValue" type="Label" parent="UI/VictoryScreen/HBoxContainer/CyclesSurvivedContainer"]
margin_top = 32.0
margin_right = 510.0
margin_bottom = 51.0
text = "10"
align = 1

[node name="LightCollectedContainer" type="VBoxContainer" parent="UI/VictoryScreen/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="LightCollectedTitle" type="Label" parent="UI/VictoryScreen/HBoxContainer/LightCollectedContainer"]
margin_right = 510.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 19 )
text = "Total Light Collected"
align = 1

[node name="LightCollectedValue" type="Label" parent="UI/VictoryScreen/HBoxContainer/LightCollectedContainer"]
margin_top = 32.0
margin_right = 510.0
margin_bottom = 51.0
text = "10"
align = 1

[node name="BuildBar" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.624
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -169.472
margin_top = 165.6
margin_right = 169.472
margin_bottom = -41.0
alignment = 1
script = ExtResource( 12 )

[node name="LightCollector" type="VBoxContainer" parent="UI/BuildBar"]
margin_right = 167.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 83.432, 20 )
size_flags_horizontal = 3
script = ExtResource( 13 )

[node name="Label" type="Label" parent="UI/BuildBar/LightCollector"]
margin_right = 167.0
margin_bottom = 19.0
text = "Collector"
align = 1

[node name="Cost" type="Label" parent="UI/BuildBar/LightCollector"]
margin_top = 23.0
margin_right = 167.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 20 )
text = "(15)"
align = 1

[node name="Tower" type="VBoxContainer" parent="UI/BuildBar"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 37.0
size_flags_horizontal = 3
script = ExtResource( 13 )
build_type = 1

[node name="Label" type="Label" parent="UI/BuildBar/Tower"]
margin_right = 167.0
margin_bottom = 19.0
text = "Tower"
align = 1

[node name="Cost" type="Label" parent="UI/BuildBar/Tower"]
margin_top = 23.0
margin_right = 167.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 20 )
text = "(15)"
align = 1

[node name="CurrentPower" type="Label" parent="UI"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = -44.0
margin_right = 101.0
margin_bottom = -25.0
text = "Power: 1"
script = ExtResource( 16 )
